[package]
name = "wsserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.25"
futures-sink = "0.3.25"
futures-util = { version = "0.3.25", features = ["async-await", "sink", "std"] }
hyper = { version = "0.14.23", features = ["full"] }
rand = "0.8.5"
sink = "0.1.0"
tokio = { version = "1.24.2", features = ["full"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"

